# QuantitativeReporting

./: .gitignore  CMakeLists.txt  LICENSE.md  QuantitativeReporting.py  README  README.md  SUMMARY.md  book.json  license.md  notes.txt  qSlicerReportingIO.cxx  qSlicerReportingIO.h  qSlicerReportingModule.cxx  qSlicerReportingModule.h  qSlicerReportingModuleModule.cxx  qSlicerReportingModuleModule.h  qSlicerReportingModuleModuleWidget.cxx  qSlicerReportingModuleModuleWidget.h  qSlicerReportingModuleWidget.cxx  qSlicerReportingModuleWidget.h
CMake/: vtkReportingVersionConfigure.h.in
DICOMPlugins/: CMakeLists.txt  DICOMM3DPlugin.py  DICOMParametricMapPlugin.py  DICOMSegmentationPlugin.py  DICOMTID1500Plugin.py
DICOMPlugins/base/: DICOMM3DPluginBase.py  DICOMPluginBase.py
Doc/: sample.cmd  sample.info
Logic/: CMakeLists.txt  vtkSlicerReportingModuleLogic.cxx  vtkSlicerReportingModuleLogic.h
MRML/: CMakeLists.txt  vtkMRMLAnnotationReportingNode.cxx  vtkMRMLAnnotationReportingNode.h  vtkMRMLReportingAnnotationNode.cxx  vtkMRMLReportingAnnotationNode.h  vtkMRMLReportingAnnotationRANONode.cxx  vtkMRMLReportingAnnotationRANONode.h  vtkMRMLReportingReportNode.cxx  vtkMRMLReportingReportNode.h
Misc/: SoDcmSegObject.cpp  SoDcmSegObject.h
Prototype/: AddDICOMSEGToSceneTest.cxx  CMakeLists.txt  DICOMReadWriteTest.cxx  ReadDICOMSEG.cxx  TestSEG.py  WriteDICOMSEG.cxx
Prototype/ClearCanvasAIM/: aim_annotations.xml
Prototype/TestData/: 2012-04-26-Scene.mrml  5 AX FRFSE-XL T2-label.nrrd  labelToSEG.nrrd  labelToSEGTransformed.nrrd
Prototype/TestData/DICOM.CT/: instance_487.dcm  instance_488.dcm  instance_489.dcm
Prototype/TestData/DICOM.SEG/: README  slicer.seg.dcm  syngo.seg.dcm
Prototype/TestData/SlicerReportingAIM/: 1.2.276.0.7230010.3.1.4.0.9625.1345852568.149995.dcm  organ_annotation.xml
Prototype/TestData/SlicerScene/: CT_label.nrrd  CT_volume.nrrd  TestScene.mrml
Prototype/TestData/SlicerScene/TestScene/: TestScene.mrml
Py/: CMakeLists.txt  ColorBox.py  DICOMParametricMapPlugin.py  DICOMPluginBase.py  DICOMSegmentationPlugin.py  DICOMTID1500Plugin.py  EditColor.py  Helper.py  QuantitativeReporting.py  Reporting.py  SEGExporterSelfTest.py  SlicerReportingModuleWidgetHelper.py  qSlicerReportingModuleWidget.py  startSlicelet.sh
QuantitativeReporting/: CMakeLists.txt  QuantitativeReporting.py
QuantitativeReporting/QRCustomizations/: CustomDICOMDetailsWidget.py  CustomSegmentEditor.py  CustomSegmentStatistics.py  SegmentEditorAlgorithmTracker.py
QuantitativeReporting/QRUtils/: htmlReport.py  testdata.py
QuantitativeReporting/Resources/Icons/: ReportingLogo.ai
QuantitativeReporting/Resources/Validation/: general_content_example.json  general_content_schema.json
QuantitativeReporting/Validation/: general_content_schema.json
Resources/: qSlicerReportingModule.qrc
Resources/ColorFiles/: ReportingAnatomyColors.txt
Resources/StandardTerminology/: GenericAnatomyColors-SNOMED.csv
Resources/UI/: qSlicerReportingModule.ui  qSlicerReportingModuleModule.ui
SEG2NRRD/: CMakeLists.txt  SEG2NRRD.cxx
SEGSupport/: CMakeLists.txt  DumpSEGFrame.cxx  DumpSEGFrame.xml  EncodeSEG.cxx  EncodeSEG.cxx.updated  EncodeSEG.xml  SEG2NRRD.cxx  SegmentAttributes.h  framesorter.h
Testing/: CMakeLists.txt  QuantitativeReportingTests.py  RepeatInsertTest.py
Testing/Cxx/: CMakeLists.txt  vtkMRMLReportingAnnotationRANONodeTest1.cxx  vtkMRMLReportingReportNodeTest1.cxx  vtkSlicerReportingModuleLogicTest1.cxx
Testing/Python/: CMakeLists.txt  ReportingRoundTripTest.py  ReportingSelfTest.py
Util/: LabelToDICOMSEGConverterScript.py  RGBStackLabelConverter.py  TerminologyMapToWikiTable.py
Util/LabelToDICOMSEGConverter/: CMakeLists.txt  LabelToDICOMSEGConverter.py
Util/LabelToDICOMSEGConverter/Testing/Python/: CMakeLists.txt  LabelToDICOMSEGConverterSelfTest.py  LabelToDICOMSEGSelfTest.py
Widgets/: CMakeLists.txt  qMRMLAnnotationReportingWidget.cxx  qMRMLAnnotationReportingWidget.h  qMRMLReportingAnnotationRANOWidget.cxx  qMRMLReportingAnnotationRANOWidget.h  qMRMLReportingAnnotationWidget.cxx  qMRMLReportingAnnotationWidget.h  qMRMLReportingTreeView.cxx  qMRMLReportingTreeView.h  qMRMLReportingTreeView_p.h  qMRMLSceneDisplayableHierarchyModel.cxx  qMRMLSceneDisplayableHierarchyModel.h  qMRMLSortFilterDisplayableHierarchyProxyModel.cxx  qMRMLSortFilterDisplayableHierarchyProxyModel.h
docs/: install.md  introduction.md  slicelet.md  troubleshooting.md  tutorial.md  user-interface.md
docs/images/: UserInterface.psd
docs/screenshots/: user_interface.psd
docs/user_guide/: install.md  introduction.md  user-interface.md
styles/: print.css  website.css
